add style + focus + hover for btn utility class in style.css file

--- a/style.css
+++ b/style.css
@@ -25,6 +25,23 @@ body {
   height: 100vh;
   width: 100vw;
 }
+
+.btn {
+  border: none;
+  background-color: #fff;
+  color: #516dff;
+  font-family: inherit;
+  padding: 15px 20px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  opacity: 0.9;
+}
+
+.btn:focus {
+  outline: none;
+}
 /* End: Global Styles */
 
 .choose-insect-btn img {
