add style game-container + score + time in style.css file

--- a/style.css
+++ b/style.css
@@ -92,3 +92,21 @@ h1 {
   height: 100px;
   object-fit: contain;
 }
+
+.game-container {
+  position: relative;
+}
+
+.time,
+.score {
+  position: absolute;
+  top: 20px;
+}
+
+.time {
+  left: 20px;
+}
+
+.score {
+  right: 20px;
+}
